--- a/src/index.html
+++ b/src/index.html
@@ -8,134 +8,116 @@
 </head>
 <body>
   <div class="container-fluid login-block">
-    <div class="container">
+    <div class="container landing">
       <div class="row starting-form">
         <div class="col-md-4 login-sec">
           <h2 class="text-center">Help Us Tailor Your Experience</h2>
-          <form class="form-signin">
+          <form id="form">
             <div class="form-label-group">
               <input type="number" id="age" class="form-control" placeholder="Current Age" required autofocus>
-              <label for="Age">Current Age</label>
             </div>
             <div class="form-label-group">
-              <input type="number" id="cryoYears" class="form-control" placeholder="Cryogenic Years" required autofocus>
-              <label for="cryoYears">Cryogenic Years</label>
+              <input type="number" id="cryoYears" class="form-control" placeholder="Cryogenic Years Planned" required autofocus>
             </div>
-            <div class="form-label-group">
-              <input type="email" id="email" class="form-control" placeholder="Email address" required>
-              <label for="email">Email Address</label>
-            </div>
-            <button type="submit" class="btn btn-secondary float-right">See Packages</button>
+            <button type="submit" class="btn btn-secondary" id="seePackages">See Packages</button>
           </form>
           <div class="copy-text">Created with <i class="fa fa-heart"></i> by The Halo Group</div>
         </div>
         <div class="col-md-8 banner-sec">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="https://silversea-h.assetsadobe2.com/is/image/content/dam/silversea-com/ships/silver-moon/silversea-luxury-cruises-silver-moon-1200x800.jpg?wid=530&fmt=pjpeg&pscan=5&qlt=80&fit=hfit" alt="Space Cruiser">
-              <div class="carousel-caption d-none d-md-block">
-                <div class="banner-text">
-                  <h2>Luxury Space Cruisers</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                </div>  
-              </div>
-            </div>
-            
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="https://silversea-h.assetsadobe2.com/is/image/content/dam/silversea-com/ships/silver-moon/silversea-luxury-cruises-silver-moon-1200x800.jpg?wid=530&fmt=pjpeg&pscan=5&qlt=80&fit=hfit" alt="Space Cruiser">
-              <div class="carousel-caption d-none d-md-block">
-                <div class="banner-text">
-                  <h2>Luxury Space Cruisers</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                </div>  
-              </div>
-            </div>
-
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="https://silversea-h.assetsadobe2.com/is/image/content/dam/silversea-com/ships/silver-moon/silversea-luxury-cruises-silver-moon-1200x800.jpg?wid=530&fmt=pjpeg&pscan=5&qlt=80&fit=hfit" alt="Space Cruiser">
-              <div class="carousel-caption d-none d-md-block">
-                <div class="banner-text">
-                  <h2>Luxury Space Cruisers</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                </div>  
-              </div>
-            </div>
-          </div>     
-        </div>
+          <br>
+          <h1>We are The Halo Group.</h1>
+          <p>We are leading the way in space travel and technology. Everyday, we are making breakthroughs in exploration, research, and opening the skies to all of humanity.</p>
+          <h4>Space Travel</h4>
+          <p>Space travel was once only for astronauts, but we have developed 6 top-speed cruisers for commercial travel. Our luxury solar system cruisers are equipped with high-speed satellite communication, observation decks, and themed hot-tubs</p>
+          <h4>Cryogenic Freezing</h4>
+          <p>Everyday, humanity is making new discoveries that will eventually allow us to travel farther and faster than ever before.  Many of our travelers choose to wait up to 300 years before embarking on their inter-planetary journey.</p>
+          <h4>Tailored Journey</h4>
+          <p>Not sure where or when to disembark on your adventure? Provide us with a few details about yourself to begin the your process.</p>
       </div>
     </div>
   </div>
 
-<div class="container-fluid pricing py-5">
+<div class="container-fluid pricing py-5 hidden">
   <div class="container">
     <div class="row">
-      <!-- Free Tier -->
       <div class="col-lg-4">
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
-            <h5 class="card-title text-muted text-uppercase text-center">Free</h5>
-            <h6 class="card-price text-center">$0<span class="period">/month</span></h6>
+            <h5 class="card-title text-muted text-uppercase text-center">Mercury</h5>
+            <h6 class="card-price text-center">$6.3 million</h6>
             <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Single User</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>5GB Storage</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Unlimited Private Projects</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Dedicated Phone Support</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+            <ul id="mercury-results">
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
           </div>
         </div>
       </div>
-      <!-- Plus Tier -->
       <div class="col-lg-4">
         <div class="card mb-5 mb-lg-0">
           <div class="card-body">
-            <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
-            <h6 class="card-price text-center">$9<span class="period">/month</span></h6>
+            <h5 class="card-title text-muted text-uppercase text-center">Venus</h5>
+            <h6 class="card-price text-center">$4.7 million</h6>
             <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>5 Users</strong></li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>50GB Storage</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
-              <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+            <ul id="venus-results">
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
           </div>
         </div>
       </div>
-      <!-- Pro Tier -->
       <div class="col-lg-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
-            <h6 class="card-price text-center">$49<span class="period">/month</span></h6>
+            <h5 class="card-title text-muted text-uppercase text-center">Mars</h5>
+            <h6 class="card-price text-center">$2.8 million</h6>
             <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited Users</strong></li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>150GB Storage</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited</strong> Free Subdomains</li>
-              <li><span class="fa-li"><i class="fas fa-check"></i></span>Monthly Status Reports</li>
+            <ul id="mars-results">
             </ul>
-            <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h5 class="card-title text-muted text-uppercase text-center">Jupiter</h5>
+            <h6 class="card-price text-center">$14 million</h6>
+            <hr>
+            <ul id="jupiter-results">
+            </ul>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h5 class="card-title text-muted text-uppercase text-center">Saturn</h5>
+            <h6 class="card-price text-center"><i>Coming Soon</i></h6>
+            <hr>
+            <ul id="saturn-results">
+              <li>Your age on Saturn: <i>Coming Soon</i>
+              <li>Life Expectancy: <i>Coming Soon</i>
+            </ul>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-muted text-uppercase text-center">Uranus</h5>
+            <h6 class="card-price text-center"><i>Coming Soon</i></h6>
+            <hr>
+            <ul id="uranus-results">
+              <li>Your age on Uranus: <i>Coming Soon</i>
+              <li>Life Expectancy: <i>Coming Soon</i>
+            </ul>
+            <a href="#" class="btn btn-block btn-secondary text-uppercase">Select Package</a>
           </div>
         </div>
       </div>
