fix punctuation in readme, add repository in package.json

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="col-md-8">
             <h3>Age is different out here.</h3>
-            <p>When planning for your trip, please bare in mind that due to orbiting distances and speeds, the length of a year will vary from planet to planet.  If you suffer from Seasonal Affective Disorder or are emotionally invested in birthday parties, please consider the calculations in each of our packages.</p>
+            <p>When planning for your trip, please bare in mind that due to orbiting distances and speeds, the length of a year will vary from planet to planet.  While length of a planet's year will not affect the length of your life, please consider the calculations in each of our packages if you are deeply emotionally invested in birthday parties.</p>
             <p>*Remaining Life Expectancy includes cryogenically frozen years.</p>
             <p>*Prices are an approximation and are subject to change.</p>
           </div>
